Fixed gui bug with overlay spacing

--- a/public/css/credentials.css
+++ b/public/css/credentials.css
@@ -4,6 +4,7 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height:100%;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
   background: rgba(41, 128, 185, 0.8);
+  min-height:100%;
 }
 
 body > .grid {
